# janus

./: BENCHMARK_README.md  CMakeLists.txt  README.md  architecture_design.md  benchmark_visualization.py  config.toml  testing_plan.md
.github/workflows/: ci.yml
include/: configuration.h  cuda_manager.h  force_calculator.h  mesh.h  particle_system.h  types.h
lib/: CMakeLists.txt
lib/include/janus/: force.hpp  janus.hpp
lib/include/janus/force/: direct_sum.hpp  p3m.hpp  particle_mesh.hpp
lib/src/: lib.cpp
solver/: CMakeLists.txt
solver/src/: main.cpp
sources/: benchmark_p3m.cpp  configuration.cpp  cuda_manager.cpp  force_calculator.cpp  mesh.cpp  particle_system.cpp
src/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_kernels.cu  config.cpp  config.hpp  direct_sum_force_cpu.cpp  direct_sum_force_cpu.h  direct_sum_force_cuda.cu  direct_sum_force_cuda.h  gpu_kernels.cu  gpu_kernels.cuh  iforce.h  main.cpp  simulator.cpp  simulator.hpp  test_gpu_verification.cpp  types.h
src/force/: direct_sum_force_cpu.cpp  direct_sum_force_cuda.cu
tests/: CMakeLists.txt  test_buffer.cpp  test_config.cpp  test_configuration.cpp  test_cuda_manager.cpp  test_direct_sum_force.cpp  test_direct_sum_force_cpu.cpp  test_direct_sum_force_cuda.cpp  test_force_calculator.cpp  test_main.cpp  test_mesh.cpp  test_particle_system.cpp  test_simulator.cpp
